--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -11,8 +11,29 @@ h1 {
   margin: 0;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+  padding: 5px 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.app-container {
+  margin: 0 auto;
+  max-width: 1000px;
+}
+
 .header {
   padding: 40px;
+  border-bottom: 3px solid #900629;
 
   @media (width >= 600px) {
     display: flex;
@@ -24,4 +45,37 @@ h1 {
 .main-heading {
   font-size: 2.5rem;
   text-transform: uppercase;
+}
+
+.navigation-menu {
+  display: flex;
+  align-items: center;
+}
+
+.navigation-menu__list-item {
+  width: 300px;
+  gap: 10px;
+  margin: 20px 0px;
+  font-size: 1rem;
+
+  @media (width >= 600px) {
+    width: 300px;
+  }
+}
+
+.navigation-menu__item {
+  font-weight: bolder;
+  &.active {
+    color: #900629;
+  }
+
+  @media (width >= 600px) {
+    &.active {
+      border-bottom: 2px solid #900629;
+    }
+
+    &:hover {
+      color: #000;
+    }
+  }
 }
