--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,4 +1,5 @@
-* {
+*::after,
+::before {
   box-sizing: border-box;
 }
 
@@ -18,7 +19,6 @@ ul {
 
 li {
   list-style-type: none;
-  padding: 5px 0;
 }
 
 a {
@@ -36,6 +36,7 @@ a {
   border-bottom: 3px solid #900629;
 
   @media (width >= 600px) {
+    border-bottom: 3px solid #900629;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -43,37 +44,40 @@ a {
 }
 
 .main-heading {
+  padding: 20px 40px;
   font-size: 2.5rem;
   text-transform: uppercase;
 }
 
-.navigation-menu {
+.navigator-menu {
+  padding: 0px 40px;
   display: flex;
   align-items: center;
 }
 
-.navigation-menu__list-item {
+.navigator-menu__list {
   display: flex;
-  width: 300px;
   gap: 10px;
   margin: 20px 0px;
   font-size: 1rem;
 
   @media (width >= 600px) {
-    width: 300px;
+    flex-direction: row;
+    justify-content: space-around;
   }
 }
 
-.navigation-menu__item {
+.navigator-menu__item--active {
   font-weight: bolder;
-  &.active {
-    color: #900629;
+  color: #900629;
+  border-bottom: 2px solid #900629;
+
+  &:hover {
+    color: #000;
   }
 
   @media (width >= 600px) {
-    &.active {
-      border-bottom: 2px solid #900629;
-    }
+    border-bottom: 2px solid #900629;
 
     &:hover {
       color: #000;
