--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -55,7 +55,7 @@ a {
   align-items: center;
 }
 
-.navigator-menu__list {
+.navigator-list {
   display: flex;
   gap: 10px;
   margin: 20px 0px;
@@ -63,24 +63,25 @@ a {
 
   @media (width >= 600px) {
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 }
 
-.navigator-menu__item--active {
+.navigator-list__item {
   font-weight: bolder;
   color: #900629;
+
+  @media (width >= 600px) {
+    &:hover {
+      color: #000;
+    }
+  }
+}
+
+.navigator-list__item--active {
   border-bottom: 2px solid #900629;
 
   &:hover {
     color: #000;
-  }
-
-  @media (width >= 600px) {
-    border-bottom: 2px solid #900629;
-
-    &:hover {
-      color: #000;
-    }
   }
 }
