--- a/src/monuments/components/cardList/renderCardList.css
+++ b/src/monuments/components/cardList/renderCardList.css
@@ -1,6 +1,10 @@
 .card-list{
   padding: 15px 0;
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
   gap: 15px;
+
+   @media (width >= 600px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
+
